Random array generator with OpenMP

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,4 +1,9 @@
 AM_CFLAGS = -Wall -Wextra -Werror
+if WITH_OPENMP
+AM_CFLAGS += -fopenmp
+else
+AM_CFLAGS += -Wno-unknown-pragmas
+endif
 
 bin_PROGRAMS = randarray
 randarray_SOURCES = randarray.c \
